fix align

--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,12 @@ ul {
   margin: 0;
 }
 
+li {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
 .duelBloc {
   display: flex;
   justify-content: center;
